<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/potLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/potCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="3dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/potNamePlaceholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/potNamePlaceholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <TextView
                android:id="@+id/potValuePlaceHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Pot value: &#8364;"
                app:layout_constraintLeft_toLeftOf="@+id/potNamePlaceholder"
                app:layout_constraintTop_toBottomOf="@+id/potNamePlaceholder" />

            <TextView
                android:id="@+id/potValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="20"
                app:layout_constraintLeft_toRightOf="@+id/potValuePlaceHolder"
                app:layout_constraintTop_toBottomOf="@+id/potNamePlaceholder" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/participantLabelLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/potValuePlaceHolder">

                <ImageView
                    android:id="@+id/participantLabelExpanderView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_show_more"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/showMoreParticipantsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="TextView"
                    app:layout_constraintLeft_toRightOf="@+id/participantsPlaceholder"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/participantsPlaceholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/participantsLabel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
            </android.support.constraint.ConstraintLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/potParticipantsLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="false"
                android:orientation="horizontal"
                android:overScrollMode="ifContentScrolls"
                android:scrollbars="none"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="@+id/potNamePlaceholder"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/participantLabelLayout">


            </android.support.v7.widget.RecyclerView>

            <ProgressBar
                android:id="@+id/progressPaid"
                style="@android:style/Widget.Material.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="17dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:max="100"
                android:progress="20"
                android:progressTint="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/dates"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/potParticipantsLayout" />

            <TextView
                android:id="@+id/dates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/potDatesExample"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressPaid" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>